--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "start": "next start -p 9003"
   },
   "dependencies": {
-    "@emoji-mart/data": "^1.2.1",
-    "@emoji-mart/react": "^1.1.1",
     "@tanstack/react-form": "^1.27.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
@@ -21,7 +19,7 @@
     "@tiptap/suggestion": "^3.13.0",
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
-    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.16.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.555.0",
     "mobx": "^6.15.0",
