--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "open-props": "^1.7.17",
     "postcss-import": "^16.1.1",
     "postcss-nesting": "^13.0.2",
+    "ramda": "^0.32.0",
     "react": "19.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "19.2.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@eslint/css": "^0.14.1",
     "@types/node": "^20",
+    "@types/ramda": "^0.31.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
