--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^8.49.0",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9.39.1",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "typescript": "^5"
   }
 }
