--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
     "react-select": "^5.10.2",
+    "stringz": "^2.1.0",
     "tippy.js": "^6.3.7",
     "zod": "^4.1.13"
   },
