--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
+    "sonner": "^2.0.7",
     "stringz": "^2.1.0",
     "tippy.js": "^6.3.7",
     "zod": "^4.1.13"
