--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sonner": "^2.0.7",
     "stringz": "^2.1.0",
     "tippy.js": "^6.3.7",
+    "twitter-text": "^3.1.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
