--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
+    "@tanstack/query-persist-client-core": "^5.91.11",
     "@tanstack/react-form": "^1.27.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
@@ -29,6 +30,7 @@
     "cropperjs": "^2.1.0",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.16.1",
+    "idb-keyval": "^6.2.2",
     "lucide-react": "^0.555.0",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
