--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "emoji-mart": "^5.6.0",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.555.0",
+    "media-chrome": "^4.17.2",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
     "next": "^16.1.1",
